--- a/content/blog/20250525-5th-draft.md
+++ b/content/blog/20250525-5th-draft.md
@@ -5,6 +5,6 @@ draft: false
 tags: ["seer", "fifth draft", "book progress", "developmental edit"]
 ---
 
-I'm calling the fifth draft complete. I cleaned up a number of issues, found more, and rewrote and reorganized a number of scenes again. The story is getting tighter and more cohesive. I've added more sensory description. And I've finished the last two drafts in a little over two months and a little under one month, respectively, is a good sign for my momentum.
+I'm calling the fifth draft of *The Seer of Redgate* complete. I cleaned up a number of issues, found more, and rewrote and reorganized a number of scenes again. The story is getting tighter and more cohesive. I've added more sensory description. And I've finished the last two drafts in a little over two months and a little under one month, respectively, is a good sign for my momentum.
 
 I still have a long list of fixes I want to make. But I've exported my manuscript and submitted it to my developmental editor and my first beta reader. This is the first time I've sent the book out for feedback. I can't wait to hear back.
